removed some bad practices

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,10 @@ body {
     max-height: 15vh;
     margin: auto;
 }
-
+#source {
+    color: black;
+    font-size: 10px;
+}
 #btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
     cursor: pointer;
     background-color: #0d316b;
