--- a/css/styles.css
+++ b/css/styles.css
@@ -63,12 +63,12 @@ body {
     color: black;
     font-size: 10px;
 }
-#btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
+#button0:hover, #button1:hover, #button2:hover, #button3:hover, #replay-button:hover {
     cursor: pointer;
     background-color: #0d316b;
     color: white;
 }
-#btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus, #replay-btn:focus {
+#button0:focus, #button1:focus, #button2:focus, #button3:focus, #replay-button:focus {
     outline: 0;
 }
 #showAnswer {
