--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
     margin-top: 30px;
 }
 
-#btn0, #btn1, #btn2, #btn3, #replay-btn {
+#button0, #button1, #button2, #button3, #replay-button {
     background-color: #9bc1ff;
     width: 50%;
     font-size: 20px;
