--- a/css/styles.css
+++ b/css/styles.css
@@ -31,16 +31,6 @@ body {
 .buttons {
     margin-top: 30px;
 }
-#button0, #button1, #button2, #button3, #replay-button {
-    background-color: #9bc1ff;
-    width: 50%;
-    font-size: 20px;
-    color: #000;
-    border-radius: 10px;
-    padding: 10px 10px;
-    box-shadow: 10px 10px 5px #aaaaaa;
-
-}
 .flag-container {
     display: table;
     margin: 0 auto;
@@ -50,6 +40,37 @@ body {
     padding: 10px 60px;
     background-color: #0d316b;
     box-shadow: 10px 10px 5px #aaaaaa;
+}
+#landingPage {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+}
+#landingPage h3 {
+    margin-top: 30vh;
+    color: #000;
+}
+#start-button {
+    margin-top: 10vh;
+    width: 50vw;
+    height: 10vh;
+    border-radius: 10px;
+    background-color: #0d316b;
+    color: #fff;
+}
+#start-button:hover {
+    background-color: #fff;
+    color: #000;
+}
+#button0, #button1, #button2, #button3, #replay-button {
+    background-color: #9bc1ff;
+    width: 50%;
+    font-size: 20px;
+    color: #000;
+    border-radius: 10px;
+    padding: 10px 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+
 }
 #flag {
     display: block;
@@ -75,6 +96,7 @@ body {
     font-size: 20px;
     color: white;
 }
+
 #progress {
     color: #2b2b2b;
     text-align: center;
